Mac: Take alpha channel into account when reading system colors in Blink

Bug: 898278
Change-Id: I24ae7ef4e8accd54244dfd09721fa376dadfba34
Reviewed-on: https://chromium-review.googlesource.com/c/1305498
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604111}
Former-commit-id: 36de6d6adeb99fb05f79daab1868568f4cca367c